versioned_docs/version-1.5.2/references/commands/cli/epinio_target.md
---
title: ""
sidebar_label: "epinio target"
---

<head>
  <link rel="canonical" href="https://docs.epinio.io/references/commands/cli/epinio_target"/>
</head>
## epinio target

Targets an epinio-controlled namespace.

```
epinio target [namespace] [flags]
```

### Options

```
  -h, --help   help for target
```

### Options inherited from parent commands

```
  -c, --kubeconfig string        (KUBECONFIG) path to a kubeconfig, not required in-cluster
      --no-colors                Suppress colorized output
      --settings-file string     (EPINIO_SETTINGS) set path of settings file (default "~/.config/epinio/settings.yaml")
      --skip-ssl-verification    (SKIP_SSL_VERIFICATION) Skip the verification of TLS certificates
      --timeout-multiplier int   (EPINIO_TIMEOUT_MULTIPLIER) Multiply timeouts by this factor (default 1)
      --trace-level int          (TRACE_LEVEL) Only print trace messages at or above this level (0 to 255, default 0, print nothing)
      --verbosity int            (VERBOSITY) Only print progress messages at or above this level (0 or 1, default 0)
```

### SEE ALSO

* [epinio](./epinio.md)	 - Epinio cli

